--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
-<body>
-   <margin:20>hello,guys</margin:20> 
-<<background-color: id="#333f48"></background-color:>
+<body style="background=#333f48">
+   hello,guys<br>
+
     yoyoyoyoyo!
     
 
