--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
-<body style="background=#333f48">
+<body style="background:#333f48">
    hello,guys<br>
 
     yoyoyoyoyo!
