--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Sparkle's website</title>
 </head>
-<body style="background:#333f48">
+<body style="background:#333f48" 
+title="my practice" >
    hello,guys<br>
 
     yoyoyoyoyo!
