--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 <h1>19歲頂下酒吧 她變大亨擁4億身價</h1>
 <h2>記者黃佳萍、黃智忠／高雄報導</h2>
 <h3>品牌創辦人AMY曾表示自己不愛唸書，只有高職畢業，19歲拿著爸爸給的30萬元頂下酒吧創業，<br>還曾經攔下想賴帳的客人要錢，因為很有生意頭腦，求新求變，<br>2013年還跨足飯店旅遊業，在墾丁開旅店，多方經營投資，餐廳還往台南台中展店，從酒吧小妹變成擁有4億身價的餐飲女大亨，來看她的成功故事。</h3>
-
+<img src="https://s.yimg.com/ny/api/res/1.2/TPffVz4gkm2o9fodNMtOZQ--/YXBwaWQ9aGlnaGxhbmRlcjtzbT0xO3c9NTEwO2g9Mjg3/http://media.zenfs.com/zh-Hant-TW/homerun/setn.com.tw/4bb22343e756f198f63d02a1a2f62c1b">
 </body>
 </html>
