--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Sparkle's website</title>
 </head>
-<body style="background:#d8dadb" >
+<body style="background:#f1f1f1" >
 
 <h1>19歲頂下酒吧 她變大亨擁4億身價</h1>
 <h2>記者黃佳萍、黃智忠／高雄報導</h2>
